# AgentSDK-on-Azure-HOL

./: .gitignore  README.md
multiple/: azure.yaml
multiple/app/client/: test.http
multiple/app/server/: .env.sample  pyproject.toml  startup.py
multiple/app/server/controllers/: controller.py
multiple/app/server/plugins/search_plugin/: search_plugin.py
multiple/app/server/plugins/search_plugin/services/: search_agent_service.py
multiple/app/server/services/: service_settings.py  services.py
single/: .gitignore  azure.yaml
single/app/client/: test.http
single/app/server/assistant_manager_sample/services/: assistant_manager_service.py  openapi_spec_service.py
single/app/server/azure_functions/: function_app.py  requirements.txt
single/infra/: README.md  main.parameters.json
